add skeleton files for ben's sections

--- a/report.tex
+++ b/report.tex
@@ -24,8 +24,10 @@ This is the paper's abstract \ldots
 \subsection{Related Work}
 
 \section{Approach}
+\input{approach}
 
 \section{Expected Contributions}
+\input{contrib}
 
 \section{Milestones \& Plans}
 
