--- a/contrib.tex
+++ b/contrib.tex
@@ -1,1 +1,3 @@
-bar
+The baseline contribution of our project will be a {\bf stable graph algorithm}, as defined in the previous section. This algorithm will include formal metrics for computing ``edit distances'' ($\Delta$), and an analysis of the stability relation $\mathcal{R}$ that the algorithm provides.
+
+We will also contribute methods for parameterizing our algorithm over some of the options outlined in the previous section. As described in the milestones section, we do not expect to do all of these justice in our limited time.
