Added related work.

--- a/report.tex
+++ b/report.tex
@@ -21,7 +21,9 @@ This is the paper's abstract \ldots
 
 \subsection{Goal}
 \subsection{Background}
+\cite{Liu:2012:CCI:2342356.2342431}
 \subsection{Related Work}
+\input{related}
 
 \section{Approach}
 \input{approach}
