Added content to Milestones and Plans (no risks yet).

--- a/related.tex
+++ b/related.tex
@@ -7,7 +7,7 @@ S. Kumar et al~\cite{maxflow} developed an algorithm with complexity $O((\Delta 
 
 Henzinger~\cite{Henzinger97maintainingminimum} describes a simple algorithm for maintaining the minimum weight spanning tree while the graph changes. This was the first algorithm that run in sublinear time per update operation.
 
-For shortest path computations, there is a fairly rich literature about dynamic algortihms for computing both single source shortest path trees and also all-pairs shortest path trees. Camil Demetrescu and Giuseppe F. Italiano did an extensive experimental analysis \cite{Demetrescu04experimentalanalysis} on several shortest path algorithms. They used both synthetic examples and also real world examples (include internet networks and road networks). Their experiments show that some of these algortihms have a high memory usage, needing at least 10GB when using 10000 nodes.
+For shortest path computations, there is a fairly rich literature about dynamic algortihms for computing both single source shortest path trees and also all-pairs shortest path trees. Camil Demetrescu and Giuseppe F. Italiano did an extensive experimental analysis \cite{Demetrescu04experimentalanalysis} on several shortest path algorithms. They used both synthetic examples and also real world examples (include internet networks and road networks). Their experiments show that some of these algortihms have a high memory usage, needing at least 10GB of memory when using 10000 nodes.
 
 \subsubsection{Road Networks}
 
