Changed milestones by taking account Ben's suggestions.

--- a/milestones.tex
+++ b/milestones.tex
@@ -2,11 +2,11 @@
 \begin{tabular}{| l || l | }
 \hline
 \textbf{Week} & \textbf{Goal} \\ \hline
-03/10 & Outline of the algorithm and initial work on the implementation. \\ \hline
-03/17 & Handle incoming users. \\ \hline
-03/24 & Handle link quality updates. \\ \hline
+03/10 & Outline of the algorithm. \\ \hline
+03/17 & Initial work on the implementation. \\ \hline
+03/24 & Handle link quality changes assuming a static set of users. \\ \hline
 03/31 & Project progress presentation and report. \\ \hline
-04/07 & Handle server failures. \\ \hline
+04/07 & Handle incoming users. \\ \hline
 04/14 & Handle controller failures. \\ \hline
 04/21 & Design of benchmarks. \\ \hline
 04/28 & Evaluation. \\ \hline
@@ -16,12 +16,12 @@
 
 \subsubsection{75\% Goal}
 
-A basic working system that is capable of handling incoming users and link quality changes.
+A basic working system that is capable of handling link quality changes by assuming a static set of users.
 
 \subsubsection{100\% Goal}
 
-A system that also handles server failures. A comprehensive benchmark of the system.
+Also handle users that join and leave the system. A comprehensive benchmark of the system.
 
 \subsubsection{125\% Goal}
 
-A system that handles all types of changes in the network and also controller failures.
+A system that handles all types of changes in the network including controller failures.
