Added some risks.

--- a/risks.tex
+++ b/risks.tex
@@ -1,1 +1,1 @@
-We assume that ...
+Since there is another group working on the same system, we may not be able to fully integrate their discovery and dissemination planes with our decision plane. If that happens we will have to create a mock interface that will still allows to benchmark the decision plane.
