Finished up evaluation.

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -14,3 +14,5 @@ Finally, the metrics for measuring resilliency are the following:
 \item Recovery time during different type of server failures.
 \item Users impacted by a failure.
 \end{itemize}
+
+We also would like to compare these metrics against an unstable version of our algorithm. This will give us an indication of how important is stability in the performance of the system.
