Write background and goals.

--- a/report.tex
+++ b/report.tex
@@ -14,15 +14,15 @@
 \documentclass[10pt]{article}
 \usepackage{hyperref}
 \usepackage{fullpage}
+\usepackage[utopia]{mathdesign}
 
 \begin{document}
 \maketitle
 
 \section{Introduction}
 
-\subsection{Goal}
-\subsection{Background}
-\cite{Liu:2012:CCI:2342356.2342431}
+\subsection{Background and Goal}
+\input{bg}
 \subsection{Related Work}
 \input{related}
 
