--- a/bg.tex
+++ b/bg.tex
@@ -1,4 +1,4 @@
-As proposed in \cite{Liu:2012:CCI:2342356.2342431}, modern content distribution networks fall short of the challenges of high-performance video distribution to a demanding user-base. We have theorized that this is in part due to the {\em decentralized} way in which the routing graph is established: when nodes in the data distribution plane build a routing graph by distributedly attaching themselves to their most opportune neighbours, it can result in a suboptimal graph when viewed from a global perspective.
+As proposed in \cite{Liu:2012:CCI:2342356.2342431}, modern content distribution networks fall short of the challenges of high-performance video distribution to a demanding user-base. We have theorized that this is in part due to the {\em decentralized} way in which the routing graph is established: when nodes in the data distribution plane build a routing graph by distributedly attaching themselves to their most opportune neighbors, it can result in a suboptimal graph when viewed from a global perspective.
 
 Our goal is to design an architecture for content distribution networks based on {\em centralized global knowledge} which is managed by a set of controller servers. These servers will compute and disseminate a routing graph that is (hopefully) more optimal than the state of the art.
 To keep this dissemination from taking too much bandwidth, we will also ensure that our graph computation algorithm is {\em stable}, which means that small changes in the network topology cannot result in large changes in the resulting graph.
