--- a/evaluation.tex
+++ b/evaluation.tex
@@ -3,7 +3,7 @@ To evaluate our system we will develop a workload generator that creates differe
 We want to measure the throughput and resiliency in the situations described above. For throughput we have the following metrics:
 
 \begin{itemize}
-\item Average bitrate received on each edge server.
+\item Average bit-rate received on each edge server.
 \item Average buffering ratio on each edge server.
 \item Average join time on each edge server.
 \end{itemize}
